# CodeReview

./: README.md
security-bug-examples/: validate.py
security-bug-examples/auth-failures/c/: Makefile  README.md  main.c  main_SECURITY.md  main_expected.json
security-bug-examples/auth-failures/cpp/: Makefile  README.md  main.cpp  main_SECURITY.md  main_expected.json
security-bug-examples/auth-failures/go/: README.md  go.mod  main.go  main_SECURITY.md  main_expected.json
security-bug-examples/auth-failures/java/: App.java  App_SECURITY.md  App_expected.json  README.md  pom.xml
security-bug-examples/auth-failures/javascript/: README.md  app.js  app_SECURITY.md  app_expected.json  package.json
security-bug-examples/auth-failures/python/: README.md  app.py  app_SECURITY.md  app_expected.json
security-bug-examples/auth-failures/rust/: Cargo.toml  README.md  main.rs  main_SECURITY.md  main_expected.json
security-bug-examples/broken-access-control/c/: Makefile  README.md  main.c  main_SECURITY.md  (+1 more)
security-bug-examples/docs/: README.md  c_security_review_guide.md  cpp_security_review_guide.md  go_security_review_guide.md  java_security_review_guide.md  javascript_security_review_guide.md  python_security_review_guide.md  rust_security_review_guide.md
security-bug-examples/schemas/: expected_findings.schema.json
security-bug-examples/ssrf/rust/: Cargo.toml  README.md  main.rs  main_SECURITY.md  main_expected.json
security-bug-examples/tests/: test_pbt_consistency.py  test_pbt_readme_guides.py  test_pbt_source_constraints.py  test_pbt_structure.py
(+431 files in other folders)
