[package]
name = "gateway-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
reqwest = { version = "0.11.23", features = ["json"] }
url = "2.5.0"
md5 = "0.7.0"
tokio = { version = "1.34.0", features = ["full"] }
